# quoridor

./: Quoridor_Colab_Setup.ipynb  pyproject.toml
code/: evaluate.py  play.py  play_online.py  train.py
code/adapters/: base_adapter.py  example_site_adapter.py
code/configs/: config.yaml  settings.yaml
code/engine/: board.py  game.py  moves.py  pathfinder.py  rules.py  zobrist.py
code/evaluation/: elo.py
code/models/: board_encoder.py  quoridor_net.py
code/quoridor_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code/search/: endgame_solver.py  mcts.py  minimax.py  random_bot.py
code/tests/: test_co_play_and_history.py  test_engine_random.py  test_mcts.py  test_nn.py  test_path.py  test_pawn.py  test_wall.py
code/training/: experience_buffer.py  model_registry.py  self_play_worker.py  trainer.py
code/ui/: pygame_gui.py
code/utils/: history_tracker.py  logger.py  model_manager.py
data/: global_history.json
data/checkpoints/: metadata.json
docs/: quoridor_ai_final_plan.md
