[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quoridor-ai"
version = "0.1.0"
description = "A Quoridor AI using AlphaZero and SINN architectures."
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pytest>=8.5.0",
    "pygame>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["code"]
